# llm-tools-quickjs

./: README.md  llm_tools_quickjs.py  pyproject.toml
tests/: test_llm_tools_quickjs.py
